--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -14,7 +15,9 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-range-slider-input": "^3.2.1",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
