--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.16.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
     "next": "latest",
