--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ STRIPE_PUBLIC_KEY=pk_test_XXXXXXXXXXXXXXXXXXXX
 NEXT_PUBLIC_API_URL=https://api.example.com/public
 NEXT_PUBLIC_IMAGE_URL=https://cdn.example.com/images
 NEXT_PUBLIC_API_URL: process.env.NEXT_PUBLIC_API_URL,
-NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_API_BASE_URL=https://cabdev.preproductiondemo.com
