--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_API_BASE_URL=https://cabdev.preproductiondemo.com
 
 NEXT_PUBLIC_BASE_PATH=
