--- a/.env
+++ b/.env
@@ -2,6 +2,11 @@ SERVICE_URL=https://api.example.com
 ANALYTICS_ID=UA-XXXXXXXXX-X
 STRIPE_PUBLIC_KEY=pk_test_XXXXXXXXXXXXXXXXXXXX
 NEXT_PUBLIC_API_URL=https://api.example.com/public
-NEXT_PUBLIC_IMAGE_URL=https://cdn.example.com/images
+NEXT_PUBLIC_IMAGE_URL=ttps://cabdev.preproductiondemo.com
 NEXT_PUBLIC_API_URL: process.env.NEXT_PUBLIC_API_URL,
+
+# NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
 NEXT_PUBLIC_API_BASE_URL=https://cabdev.preproductiondemo.com
+
+
+
