new changes for all

--- a/.env
+++ b/.env
@@ -6,7 +6,9 @@ NEXT_PUBLIC_IMAGE_URL=ttps://cabdev.preproductiondemo.com
 NEXT_PUBLIC_API_URL: process.env.NEXT_PUBLIC_API_URL,
 
 # NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
-NEXT_PUBLIC_API_BASE_URL=https://cabdev.preproductiondemo.com
+# NEXT_PUBLIC_API_BASE_URL=https://cabdev.preproductiondemo.com
+NEXT_PUBLIC_API_BASE_URL=https://cannabis.stage.preproductiondemo.com
+
 
 
 
