--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,5 @@
 # NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
-NEXT_PUBLIC_API_BASE_URL=https://cabdev.preproductiondemo.com
+# NEXT_PUBLIC_API_BASE_URL=https://cabdev.preproductiondemo.com
+NEXT_PUBLIC_API_BASE_URL=https://cannabis.stage.preproductiondemo.com
 
 NEXT_PUBLIC_BASE_PATH=
